<resources>
    <string name="app_name">quiz</string>

    <string name="SorryText">SORRY! FOR SOMETHING WENT WRONG.</string>
    <string name="btnText">PLEASE REPORT TO US </string>
    <string name="quiz_summery">Quiz Summery</string>
    <string name="totat_played">Totat Played</string>
    <string name="play_again">Play Again</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="total_score">Total Score</string>
    <string name="total_duration">Total Duration</string>
    <string name="general">General</string>
    <string name="blind">Blind</string>
    <string name="dashboard">DashBoard</string>
    <string name="courses">Courses</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="edit">Edit</string>
    <string name="live_leaderboard">Live LeaderBoard</string>
    <string name="cources">Courses</string>
    <string name="start">Start</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="eduquiz">EDU\nQUIZ</string>
    <string name="powerdBy">Powered by Educare Apps Ltd</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_account_yet_create_one">OR\n Do you want to register?</string>
    <string name="loginOption">OR\n Do you want to Login</string>
    <string name="register">REGISTER</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_test">Select Test</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_g">Continue with G+</string>

    <string name="facebook_app_id">507421042948057</string>
    <string name="fb_login_protocol_scheme">fb507421042948057</string>

    <string name="api_key">AIzaSyAV6Iuzz1op1b1Hdb5XKDDxrD5i-pnG2B4</string>
    <string name="Quiz_API_key">AIzaSyAV6Iuzz1op1b1Hdb5XKDDxrD5i-pnG2B4</string>


</resources>
