<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight=".3"
            android:background="@color/transparent"
            android:padding="@dimen/fifteen"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight=".1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/seventy"
            android:layout_centerInParent="true"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:weightSum="1.5">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight=".2" />

            <Button
                android:id="@+id/btnDashBoard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight=".3"
                android:background="@color/white"
                android:text="@string/dashboard"
                android:textColor="@color/black"
                android:textSize="@dimen/thirty" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight=".1" />

            <Button
                android:id="@+id/btnCourses"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight=".3"
                android:background="@color/white"
                android:text="@string/courses"
                android:textColor="@color/black"
                android:textSize="@dimen/thirty" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight=".1" />

            <Button
                android:id="@+id/btnLeaderBoard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight=".3"
                android:background="@color/white"
                android:text="@string/leaderboard"
                android:textColor="@color/black"
                android:textSize="@dimen/thirty" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight=".2" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight=".1" />

    </LinearLayout>


</RelativeLayout>
